--- a/src/entity/result-game/pet-slider/style.module.scss
+++ b/src/entity/result-game/pet-slider/style.module.scss
@@ -84,8 +84,8 @@
   z-index: 2;
 
   svg {
-    height: 80px;
-    width: 121px;
+    height: 100px;
+    width: 141px;
   }
 
   p {
@@ -95,18 +95,11 @@
     font-weight: 700;
     text-align: center;
     margin-bottom: 0;
-    margin-right: 10px;
+    margin-right: 0px;
     margin-top: -2px;
 
     width: 30%;
     text-wrap: wrap;
-  }
-
-  @media (max-width: 600px) {
-    svg {
-      height: 100px;
-      width: 141px;
-    }
   }
 }
 
